src/objects/Developmental_Competency__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <formula>Developmental_Activity__r.Assignment_Title__c</formula>
        <inlineHelpText>Activity Name - Select an Activity for this IDP that pertains to a Competency Model, Competency Area or Competency</inlineHelpText>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency_Area__c</fullName>
        <inlineHelpText>Competency Area - Here you drill deeper in the model to show what you want to develop with this activity</inlineHelpText>
        <label>Competency Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency_Model__c</fullName>
        <inlineHelpText>Competency Model - What area are you trying to develop with this activity? Your leadership skills, your contracting skills?</inlineHelpText>
        <label>Competency Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <inlineHelpText>Competency - Here you drill even deeper in the model to show what you want to develop with this activity</inlineHelpText>
        <label>Competency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developmental_Activity__c</fullName>
        <inlineHelpText>Select Activity - Select an Activity for this IDP that pertains to a Competency Model, Competency Area or Competency</inlineHelpText>
        <label>Developmental Activity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IDP_Developmental_Line_Item__c.Developmental_Objective__c</field>
                <operation>equals</operation>
                <valueField>IDP_Developmental_Line_Item__c.Developmental_Objective__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IDP_Developmental_Line_Item__c</referenceTo>
        <relationshipLabel>Developmental Competencies</relationshipLabel>
        <relationshipName>Developmental_Competencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_IDP__c</fullName>
        <formula>CASESAFEID(Developmental_Activity__r.Developmental_Objective__r.IDP__r.Id)</formula>
        <label>Related IDP</label>
        <type>Text</type>
    </fields>
    <label>Developmental Competency</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Developmental Competency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developmental Competencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>